--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,15 +23,17 @@ services:
       - DB=mongodb://db
       - REDIS=redis://cache
       - ENV=dev
+    volumes:
+      - ./:/raven
     ports: 
       - "3001:3001"
-    env_file:
-      - ./.env
     networks:
       - backend
   frontend:
     build: ./client
     ports:
       - "3000:3000"
+    volumes: 
+      - ./client:/client
     depends_on: 
       - backend
