--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
 aiohttp==3.5.4
 aiohttp-cors==0.7.0
+aioredis==1.2.0
 astroid==2.2.5
 async-timeout==3.0.1
 atomicwrites==1.3.0
 attrs==19.1.0
+Cerberus==1.3.1
 certifi==2019.6.16
 chardet==3.0.4
 Click==7.0
 devtools==0.5
 expects==0.9.0
+hiredis==1.0.0
 idna==2.8
 importlib-metadata==0.18
 isort==4.3.21
@@ -16,12 +19,14 @@ lazy-object-proxy==1.4.1
 mccabe==0.6.1
 mock==3.0.5
 more-itertools==7.1.0
+motor==2.0.0
 multidict==4.5.2
 packaging==19.0
 pluggy==0.12.0
 py==1.8.0
 Pygments==2.4.2
 pylint==2.3.1
+pymongo==3.8.0
 pyparsing==2.4.0
 pytest==5.0.1
 python-dotenv==0.10.3
