--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ more-itertools==7.1.0
 motor==2.0.0
 multidict==4.5.2
 packaging==19.0
+password-strength==0.0.3.post2
 pluggy==0.12.0
 py==1.8.0
 pydash==4.7.5
