--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 aiohttp==3.5.4
 aiohttp-cors==0.7.0
 aioredis==1.2.0
+asn1crypto==0.24.0
 astroid==2.2.5
 async-timeout==3.0.1
 atomicwrites==1.3.0
 attrs==19.1.0
+bcrypt==3.1.7
 Cerberus==1.3.1
 certifi==2019.6.16
+cffi==1.12.3
 chardet==3.0.4
 Click==7.0
+cryptography==2.7
 devtools==0.5
 expects==0.9.0
 hiredis==1.0.0
@@ -25,8 +29,10 @@ packaging==19.0
 password-strength==0.0.3.post2
 pluggy==0.12.0
 py==1.8.0
+pycparser==2.19
 pydash==4.7.5
 Pygments==2.4.2
+PyJWT==1.7.1
 pylint==2.3.1
 pymongo==3.8.0
 pyparsing==2.4.0
