--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "carbon-components": "^10.3.2",
+    "carbon-components-react": "^7.3.2",
+    "carbon-icons": "^7.0.7",
     "mobx": "^5.11.0",
     "mobx-react": "^6.1.1",
     "mobx-react-router": "^4.0.7",
     "mobx-remotedev": "^0.3.6",
     "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
