--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 aiohttp==3.5.4
 aiohttp-cors==0.7.0
 aioredis==1.2.0
+amqp==2.5.0
 asn1crypto==0.24.0
 astroid==2.2.5
 async-timeout==3.0.1
 atomicwrites==1.3.0
 attrs==19.1.0
 bcrypt==3.1.7
+billiard==3.6.0.0
+celery==4.3.0
 Cerberus==1.3.1
 certifi==2019.6.16
 cffi==1.12.3
@@ -19,6 +22,7 @@ hiredis==1.0.0
 idna==2.8
 importlib-metadata==0.18
 isort==4.3.21
+kombu==4.6.3
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
 mock==3.0.5
@@ -38,10 +42,12 @@ pymongo==3.8.0
 pyparsing==2.4.0
 pytest==5.0.1
 python-dotenv==0.10.3
+pytz==2019.1
 requests==2.22.0
 six==1.12.0
 typed-ast==1.4.0
 urllib3==1.25.3
+vine==1.3.0
 watchgod==0.4
 wcwidth==0.1.7
 wrapt==1.11.2
