--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,20 +10,25 @@ services:
     - backend
   cache:
     image: redis:alpine
+    ports: 
+      - 6379:6379
     networks: 
-    - backend
+      - backend
   celery:
     build: .
-    command: celery -A tasks worker -l info
+    command: celery worker -A tasks -l info
     volumes:
       - .:/raven
+    environment: 
+      - REDIS=redis://cache
     depends_on:
       - db
       - cache
+    networks:
+      - backend
   backend: 
     build: 
       context: .
-      dockerfile: Dockerfile
     depends_on:
       - db
       - cache
@@ -34,13 +39,13 @@ services:
     volumes:
       - .:/raven
     ports: 
-      - "3001:3001"
+      - 3001:3001
     networks:
       - backend
   frontend:
     build: ./client
     ports:
-      - "3000:3000"
+      - 3000:3000
     volumes: 
       - ./client:/client
     depends_on: 
