--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ cffi==1.12.3
 chardet==3.0.4
 Click==7.0
 colorama==0.4.1
+coverage==4.5.4
 cryptography==2.7
 devtools==0.5
 docopt==0.6.2
@@ -47,6 +48,7 @@ pymongo==3.8.0
 pyparsing==2.4.0
 pytest==5.0.1
 pytest-asyncio==0.10.0
+pytest-cov==2.7.1
 pytest-watch==4.2.0
 python-dotenv==0.10.3
 pytz==2019.1
