--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -5,6 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       uses: actions/checkout@v1
+      name: Setup Python 3.7
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
