--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -4,15 +4,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      name: Checkout code
       uses: actions/checkout@v1
+      
       name: Setup Python 3.7
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
+
       name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
       name: Run tests
       run: |
         make test
