feat: switched client to ts

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,10 +1,10 @@
-FROM node:latest
-
+FROM node:10-alpine
 
 COPY . /client
 WORKDIR /client
-RUN npm install 
 
-CMD npm start
+RUN npm install
+
+CMD [ "npm", "start" ]
 
 EXPOSE 3000
