--- a/client/package.json
+++ b/client/package.json
@@ -3,20 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "carbon-components": "^10.3.2",
-    "carbon-components-react": "^7.3.2",
-    "carbon-icons": "^7.0.7",
-    "mobx": "^5.11.0",
-    "mobx-react": "^6.1.1",
-    "mobx-react-router": "^4.0.7",
-    "mobx-remotedev": "^0.3.6",
-    "moment": "^2.24.0",
-    "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "@types/jest": "24.0.19",
+    "@types/node": "12.11.2",
+    "@types/react": "16.9.9",
+    "@types/react-dom": "16.9.2",
+    "mobx": "^5.14.2",
+    "mobx-react": "^6.1.4",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-scripts": "3.2.0",
+    "typescript": "3.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^4.12.0"
   }
 }
