--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -1,7 +1,7 @@
 name: CI Workflow
 on: [push, pull_request]
 jobs:
-  build:
+  server:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -20,3 +20,23 @@ jobs:
       - name: Run tests
         run: |
           make test
+  client:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v1
+
+      - name: Setup Node 11.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 11.x
+        
+      - name: Intall dependencies
+        run: |
+          cd client 
+          npm ci
+          
+      - name: Run tests
+        run: |
+          npm run test
+        
