fix: workflow config

--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -35,8 +35,9 @@ jobs:
         run: |
           cd client 
           npm ci
-          
+
       - name: Run tests
         run: |
+          cd client
           npm run test
         
