--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,12 @@
     "@types/node": "12.11.2",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
+    "@types/react-router-dom": "^5.1.0",
     "mobx": "^5.14.2",
     "mobx-react": "^6.1.4",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "typescript": "3.6.4"
   },
@@ -36,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.3",
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^2.5.0",
     "@typescript-eslint/parser": "^2.5.0",
@@ -51,6 +54,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "husky": "^3.0.9",
     "jest": "^24.9.0",
+    "module-alias": "^2.2.2",
     "node-sass": "^4.12.0",
     "prettier": "^1.18.2"
   },
@@ -67,5 +71,8 @@
     "watchPathIgnorePatterns": [
       "/node_modules"
     ]
+  },
+  "_moduleAliases": {
+    "@root": "./src"
   }
 }
