--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/history": "^4.7.3",
     "@types/node": "12.11.2",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
     "@types/react-router-dom": "^5.1.0",
+    "antd": "^3.24.2",
+    "history": "^4.10.1",
     "mobx": "^5.14.2",
     "mobx-react": "^6.1.4",
+    "mobx-react-router": "^4.0.7",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
