chore: removed test from pre commit hook

--- a/client/package.json
+++ b/client/package.json
@@ -68,7 +68,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "make lint && npm run test"
+      "pre-commit": "make lint"
     }
   },
   "jest": {
