--- a/client/package.json
+++ b/client/package.json
@@ -3,26 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "carbon-components": "^10.3.2",
-    "carbon-components-react": "^7.3.2",
-    "carbon-icons": "^7.0.7",
-    "mobx": "^5.11.0",
-    "mobx-react": "^6.1.1",
+    "@types/history": "^4.7.3",
+    "@types/node": "12.11.2",
+    "@types/react": "16.9.9",
+    "@types/react-dom": "16.9.2",
+    "@types/react-router-dom": "^5.1.0",
+    "antd": "^3.24.2",
+    "history": "^4.10.1",
+    "mobx": "^5.14.2",
+    "mobx-react": "^6.1.4",
     "mobx-react-router": "^4.0.7",
-    "mobx-remotedev": "^0.3.6",
-    "moment": "^2.24.0",
-    "node-sass": "^4.12.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "typescript": "3.6.4"
   },
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start": "react-scripts start",
+    "test:watch": "react-scripts test",
+    "test": "CI=true npm run test:watch -- --coverage --verbose"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,5 +40,43 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/enzyme": "^3.10.3",
+    "@types/jest": "^24.0.19",
+    "@typescript-eslint/eslint-plugin": "^2.5.0",
+    "@typescript-eslint/parser": "^2.5.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "husky": "^3.0.9",
+    "jest": "^24.9.0",
+    "module-alias": "^2.2.2",
+    "node-sass": "^4.12.0",
+    "prettier": "^1.18.2"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "none"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "make lint"
+    }
+  },
+  "jest": {
+    "watchPathIgnorePatterns": [
+      "/node_modules"
+    ]
+  },
+  "_moduleAliases": {
+    "@root": "./src"
   }
 }
