--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -20,7 +20,10 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint"],
+  "plugins": [
+    "react",
+    "@typescript-eslint"
+  ],
   "rules": {},
   "settings": {
     "react": {
