--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -20,11 +20,10 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": [
-    "react",
-    "@typescript-eslint"
-  ],
-  "rules": {},
+  "plugins": ["react", "@typescript-eslint"],
+  "rules": {
+    "quotes": "error"
+  },
   "settings": {
     "react": {
       "version": "detect"
