Feat/setup homepage (#12)
* progress on theming & tests

* tests: added tests for app router

* fix: progress on cleanup and tests

* tests: completed tests for components

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -21,7 +21,9 @@
     "sourceType": "module"
   },
   "plugins": ["react", "@typescript-eslint"],
-  "rules": {},
+  "rules": {
+    "quotes": "error"
+  },
   "settings": {
     "react": {
       "version": "detect"
