--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -12,32 +12,36 @@ jobs:
         with:
           python-version: 3.7
 
+      - name: Setup Node 11.x
+        uses: actions/setup-node@v1
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          cd client && npm ci
 
       - name: Run tests
         run: |
-          make test
-  client:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v1
-      - name: Setup Node 11.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 11.x
-      - name: Intall dependencies
-        run: |
-          cd client
-          npm ci
-      - name: Run linter
-        run: |
-          cd client
-          make lint
-      - name: Run tests
-        run: |
-          cd client
-          npm run test
+          make test-app
+  # client:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v1
+  #     - name: Setup Node 11.x
+  #       uses: actions/setup-node@v1
+  #       with:
+  #         node-version: 11.x
+  #     - name: Intall dependencies
+  #       run: |
+  #         cd client
+  #         npm ci
+  #     - name: Run linter
+  #       run: |
+  #         cd client
+  #         make lint
+  #     - name: Run tests
+  #       run: |
+  #         cd client
+  #         npm run test
