--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "16.9.2",
     "@types/react-router-dom": "^5.1.3",
     "antd": "^3.26.0",
+    "axios": "^0.19.0",
     "history": "^4.10.1",
     "mobx": "^5.15.0",
     "mobx-react": "^6.1.4",
