[WIP] Feat/integrate auth (#14)
* chore: fixed dev env

* feat: progress on login endpoint

* chore(deps): removed unused depencency

* chore: fixed client docker live build

* test: fixed failing test

* chore: updated client deps

* fix: cleaned up login handler route

* chore: removed unnecessary docker network

* chore: update gitignore

* refactor: cleaned up app init

* docs: fixed wrong comment

* refactor: cleaned up

* feat: completed auth backend integration and testing

* fix: fixed data leak in admin login endpoint

* chore: added axios dep

* chore: added session storage mock dep

* feat: progress on integrating admin auth

* feat: added auth check method to pai

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,8 @@
-FROM node:10-alpine
+FROM node:12-alpine
 
-COPY . /client
 WORKDIR /client
 
+COPY package.json /client/package.json
 RUN npm install
 
 CMD [ "npm", "start" ]
