--- a/client/package.json
+++ b/client/package.json
@@ -7,14 +7,15 @@
     "@types/node": "12.11.2",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
-    "@types/react-router-dom": "^5.1.0",
-    "antd": "^3.24.2",
+    "@types/react-router-dom": "^5.1.3",
+    "antd": "^3.26.0",
+    "axios": "^0.19.0",
     "history": "^4.10.1",
-    "mobx": "^5.14.2",
+    "mobx": "^5.15.0",
     "mobx-react": "^6.1.4",
     "mobx-react-router": "^4.0.7",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "typescript": "3.6.4"
@@ -42,25 +43,26 @@
     ]
   },
   "devDependencies": {
-    "@types/enzyme": "^3.10.3",
-    "@types/jest": "^24.0.19",
-    "@typescript-eslint/eslint-plugin": "^2.5.0",
-    "@typescript-eslint/parser": "^2.5.0",
+    "@types/enzyme": "^3.10.4",
+    "@types/jest": "^24.0.23",
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
-    "eslint": "^6.5.1",
+    "eslint": "^6.7.2",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.4.0",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "husky": "^3.0.9",
+    "husky": "^3.1.0",
     "jest": "^24.9.0",
+    "jest-localstorage-mock": "^2.4.0",
     "module-alias": "^2.2.2",
-    "node-sass": "^4.12.0",
-    "prettier": "^1.18.2"
+    "node-sass": "^4.13.0",
+    "prettier": "^1.19.1"
   },
   "prettier": {
     "singleQuote": true,
