--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,13 @@
 version: "3"
-networks:
-  backend:
 services:
   db:
     image: mvertes/alpine-mongo
     ports:
       - 27017:27017
-    networks:
-    - backend
   cache:
     image: redis:alpine
     ports:
       - 6379:6379
-    networks:
-      - backend
   celery:
     build: .
     command: bash -c "make start-celery-beat & sleep 1 && make start-celery-watch"
@@ -25,14 +19,13 @@ services:
     depends_on:
       - db
       - cache
-    networks:
-      - backend
   backend:
     build:
       context: .
     depends_on:
       - db
       - cache
+    env_file: .env
     environment:
       - DB=mongodb://db
       - REDIS=redis://cache
@@ -41,13 +34,12 @@ services:
       - .:/raven
     ports:
       - 3001:3001
-    networks:
-      - backend
   frontend:
     build: ./client
     ports:
       - 3000:3000
     volumes:
       - ./client:/client
+      - ./client/node_modules
     depends_on:
       - backend
