--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
     "@types/react-router-dom": "^5.1.3",
+    "@types/uuid": "^7.0.0",
     "antd": "^3.26.0",
     "axios": "^0.19.0",
     "history": "^4.10.1",
