--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,8 @@ mock==3.0.5
 more-itertools==7.1.0
 motor==2.0.0
 multidict==4.5.2
+mypy==0.770
+mypy-extensions==0.4.3
 packaging==19.0
 parse==1.12.1
 parse-type==0.5.2
@@ -53,7 +55,7 @@ PyJWT==1.7.1
 pylint==2.3.1
 pymongo==3.8.0
 pyparsing==2.4.0
-pytest==5.0.1
+pytest==5.4.1
 pytest-asyncio==0.10.0
 pytest-cov==2.7.1
 python-dotenv==0.10.3
@@ -63,6 +65,7 @@ redis==3.2.1
 requests==2.22.0
 six==1.12.0
 typed-ast==1.4.0
+typing-extensions==3.7.4.1
 urllib3==1.25.3
 vine==1.3.0
 watchdog==0.9.0
